--- a/index garantia/Emissor de Garantia/Garantia de Celulares/garantiamain.css
+++ b/index garantia/Emissor de Garantia/Garantia de Celulares/garantiamain.css
@@ -16,7 +16,7 @@ form {
   input {
     color: #fff;
     font-size: 28px;
-    width: 80%;
+    width: 100%;
     padding: 20px 5px 5px;
     background-color: #4f4f4f;
     border: none;
@@ -41,24 +41,28 @@ form {
 .dados h4{
     color: white;
     border-radius: 0.5em;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'REM', sans-serif;
 }
 
 .dados {
     color: white;
     text-shadow: 0 0 5px rgb(104, 103, 103);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'REM', sans-serif;
     text-align: center;
 
 }
 .print {
-    font-family: "Inter", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 
     display: none;
     margin: 10px;
     padding: 20px;
     border-radius: 30px;
     width: 600px;
+}
+.print h1{
+    font-family:'REM', sans-serif;
+    text-align: center;
 }
 .BUTTON_TRS {
     background: #020024;
